# src/main/resources/timesheet/api.yaml
@@ -16,7 +16,14 @@ paths:
       parameters:
         - name: since
           in: query
-          description: from when to start querying, including that date
+          description: from when to start querying startTimes, including that date
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: until
+          in: query
+          description: until when to query startTimes
           required: false
           schema:
             type: string
@@ -44,9 +51,15 @@ paths:
       operationId: createTimeBlock
       tags:
         - timeblocks
+      requestBody:
+        description: the timeblock to be created
+        content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TimeBlock"      
       responses:
         200:
-          description: A newly created User
+          description: A newly created timeblock
           content:
             application/json:    
               schema:
@@ -303,18 +316,22 @@ components:
         $ref: "#/components/schemas/User"
     TimeBlock:
       required:
-        - from
-        - to
+        - startTime
+        - endTime
+        - userId
       properties:
         id:
           type: integer
           format: int64
-        from:
+        startTime:
           type: string
           format: date-time
-        to:
+        endTime:
           type: string
           format: date-time
+        userId:
+          type: integer
+          format: int64
         description:
           type: string
         projectid:
